🌴 added like b days and color to userino. added eval cmd

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "discord-reply": "^0.1.2",
     "discord.js": "^12.5.3",
     "fs": "^0.0.1-security",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "ms": "^2.1.3"
   }
 }
