🍜 updated to v13 and fixed cmds

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "discord-reply": "^0.1.2",
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.0-dev.f5f3f772865ee98bbb44df938e0e71f9f8865c10",
     "fs": "^0.0.1-security",
     "mongoose": "^5.12.13",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "node-fetch": "^2.6.1"
   }
 }
