--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "leven": "^3.1.0",
     "mongoose": "^5.12.13",
     "ms": "^2.1.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "zapmongo": "^2.1.0"
   }
 }
