--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "zapmongo": "^2.1.0"
+  },
+  "scripts": {
+    "lint": "prettier --write ."
+  },
+  "devDependencies": {
+    "prettier": "^2.3.1"
   }
 }
