--- a/package.json
+++ b/package.json
@@ -12,5 +12,24 @@
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "zapmongo": "^2.1.0"
-  }
+  },
+  "name": "Shiba",
+  "description": "- [0] Fork the repo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nahann/Shiba.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nahann/Shiba/issues"
+  },
+  "homepage": "https://github.com/nahann/Shiba#readme"
 }
