--- a/package.json
+++ b/package.json
@@ -2,15 +2,35 @@
   "dependencies": {
     "axios": "^0.21.1",
     "discord-reply": "^0.1.2",
-    "discord.js": "^13.0.0-dev.f5f3f772865ee98bbb44df938e0e71f9f8865c10",
+    "discord.js": "github:discordjs/discord.js",
     "erela.js": "^2.3.3",
     "erela.js-spotify": "^1.2.0",
-    "fs": "^0.0.1-security",
     "imageapi.js": "^1.7.0",
+    "javascript-obfuscator": "^2.15.4",
     "leven": "^3.1.0",
     "mongoose": "^5.12.13",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
+    "pretty-ms": "^7.0.1",
     "zapmongo": "^2.1.0"
-  }
+  },
+  "name": "Shiba",
+  "description": "- [0] Fork the repo",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nahann/Shiba.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nahann/Shiba/issues"
+  },
+  "homepage": "https://github.com/nahann/Shiba#readme"
 }
