--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm i && node ."
   },
   "repository": {
     "type": "git",
