--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "dependencies": {
-    "@chrisoakman/chessboardjs": "^1.0.0",
     "@iamtraction/google-translate": "^1.1.2",
     "axios": "^0.21.1",
-    "chessboardjs": "^0.0.1",
-    "discord-reply": "^0.1.2",
     "discord-screenshot": "^1.0.0",
     "discord-xp": "^1.1.16",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "^13.0.0-dev.4f1f32f.1627517033",
     "erela.js": "^2.3.3",
     "erela.js-spotify": "^1.2.0",
     "imageapi.js": "^1.7.0",
     "iso-language-converter": "^1.1.0",
-    "javascript-obfuscator": "^2.15.4",
+    "javascript-obfuscator": "^2.18.1",
     "leven": "^3.1.0",
-    "mongoose": "^5.12.13",
+    "mongoose": "^5.13.4",
     "ms": "^2.1.3",
     "node-fetch": "^2.6.1",
     "pretty-ms": "^7.0.1",
@@ -22,7 +19,7 @@
     "string-progressbar": "^1.0.4",
     "zapmongo": "^2.1.0"
   },
-  "name": "Shiba",
+  "name": "shiba",
   "description": "- [0] Fork the repo",
   "version": "1.0.0",
   "main": "index.js",
